# ai_overlay_assistant

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  ROADMAP.md  build-complete.bat  build.bat  eslint.config.mjs  install-cpp-tools.bat  install-mingw.bat  install-vs-cpp.ps1  package-lock.json  package.json  run-dev.bat  rustfmt.toml  setup-buildtools.bat  tsconfig.eslint.json  tsconfig.json  vite.config.ts
.github/: CODEOWNERS
.github/workflows/: quality.yml
docs/: AI_ORB_INTEGRATION.md  engineering-standards.md  localization.md
scripts/: openclaw_gateway_watchdog.ps1
src/: ActionBarApp.tsx  App.tsx  BlackHoleOrb.tsx  ChatOverlayApp.tsx  OverlayComposer.tsx  OverlayDock.tsx  SettingsView.tsx  blackHoleOrb.css  designThemes.ts  i18n.ts  index.ts  main.tsx  overlay.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_icon.rs  audio_output.rs  background.rs  clipboard.rs  context_bucket.rs  dictation.rs  hosted_backend.rs  hotkey.rs  lib.rs  main.rs  run_control.rs  run_controller.rs  selection_capture.rs  settings.rs  stt.rs  text_actions.rs  timer_audio.rs  translation.rs  tts.rs  voice_agent.rs  voice_commands.rs  voice_memory.rs  voice_profile.rs  voice_tasks.rs  voice_tools.rs
src/components/: AIOrb.tsx  ChatWindow.tsx
src/hooks/: useAppBootstrap.ts  useAssistantTraining.ts  useVoiceAssistantRuntime.ts
src/lib/: liveStt.ts  liveSttMatching.ts  openaiTts.ts  realtimeVoiceAgent.ts  realtimeVoiceAgentSupport.ts  realtimeVoiceTransport.ts  ttsService.ts  (+2 more)
(+21 files in other folders)
