[package]
name = "voice_overlay_assistant"
version = "0.1.0"
description = "Windows-first desktop shell for a voice overlay assistant"
authors = ["Steve"]
edition = "2021"

[lib]
name = "voice_overlay_assistant"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
rodio = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = ["image-png", "tray-icon"] }
tungstenite = { version = "0.24", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
zip = { version = "0.6", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
